src/objects/CO_Kit_Header__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Kit_Price__c</fullName>
        <label>Actual Kit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CO_Fixed_KitHeader__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CO Fixed KitHeader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CO_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CO Header</label>
        <referenceTo>CO_Header__c</referenceTo>
        <relationshipLabel>CO Kit Headers</relationshipLabel>
        <relationshipName>CO_Kit_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Can_Split__c</fullName>
        <defaultValue>true</defaultValue>
        <description>a checkbox indicator to control whether or not the kit can be split apart once it has been added to an Items sub-section of a customer order.  By default this will be set to True</description>
        <label>Can Split</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_Kit_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Kit Header</label>
        <referenceTo>Deal_Kit_Header__c</referenceTo>
        <relationshipLabel>CO Kit Headers</relationshipLabel>
        <relationshipName>CO_Kit_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to deal</description>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>CO Kit Headers</relationshipLabel>
        <relationshipName>CO_Kit_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fixed_Price_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A check box to indicate that the user has set a fixed price for the Kit.</description>
        <label>Fixed Price Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Unresolved_Fulfillment_Exists__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Unresolved Fulfillment Exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kit_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kit Header</label>
        <referenceTo>Kit_Header__c</referenceTo>
        <relationshipLabel>CO Kit Headers</relationshipLabel>
        <relationshipName>CO_Kit_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CO_Kit_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Kit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A check box indicator to restrict the use of the kit to Service Sections only.  It also controls the availability of the additional service-specific fields in the modal window or for display in the Info section when viewing a kit.  By default this will be set to False.</description>
        <label>Service Kit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Discount__c</fullName>
        <label>Total Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <description>Unique identifier to map on UI.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique identifier to map on UI.</inlineHelpText>
        <label>UUID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>CO Kit Header</label>
    <nameField>
        <displayFormat>COKH-{00000000}</displayFormat>
        <label>CO Kit Header Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CO Kit Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>